--- a/package.json
+++ b/package.json
@@ -8,15 +8,15 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
-		"next": "^13.1.6",
+		"next": "^13.2.3",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
-		"swr": "^2.0.3"
+		"swr": "^2.1.0"
 	},
 	"devDependencies": {
-		"@types/node": "^18.11.18",
-		"@types/react": "^18.0.27",
-		"typescript": "<4.9.0"
+		"@types/node": "^18.14.6",
+		"@types/react": "^18.0.28",
+		"typescript": "^4.9.5"
 	},
 	"author": "Monstrag",
 	"license": "UNLICENSED",
