--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
 		"next": "^13.1.6",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
-		"swr": "^2.0.3"
+		"swr": "2.1.3"
 	},
 	"devDependencies": {
 		"@types/node": "^18.11.18",
